fix path in workflow; svelte reqs non beginning /
fail to build info:
error during build:
Could not load svelte.config.js: config.kit.paths.base option must
either be the empty string or a root-relative path that starts but
doesn't end with '/'. See
https://svelte.dev/docs/kit/configuration#paths

--- a/.github/workflows/deploy_pages_dispatchable.yml
+++ b/.github/workflows/deploy_pages_dispatchable.yml
@@ -41,8 +41,7 @@ jobs:
         run: pnpm install
       - name: distribute
         env:
-          # Change base on repo or desired location '/' will post to github.io base (origin)
-          BASE_PATH: '/'
+          BASE_PATH: ''
         run: |
           pnpm run build
           touch build/.nojekyll
